# dictionary

./: CMakeLists.txt
include/: dictionary.h
src/: CMakeLists.txt  main.cpp
